--- a/living-sustainability.html
+++ b/living-sustainability.html
@@ -86,7 +86,7 @@
           <div class="research-section br-12 pd-24 hide-long">
             <span class="r-title">Living Sustainability: In-Context Interactive Environmental Impact Communication</span>
             <span class="r-description">Zhihan Zhang, <b>Pu Thavikulwat</b>, Alexander Le Metzger, Yuxuan Mei, Felix Hähnlein, Zachary Englhardt, Tingyu Cheng, Shwetak Patel, Adriana Schulz, Vikram Iyer</span>
-            <span class="r-status"><b>-- Under Submission (IMWUT '25) --</b></span>
+            <span class="r-status"><b>--- Under Submission (IMWUT '25) ---</b></span>
             <img src="/img/external_link.svg" alt="External link to research paper" id="research-link-icon">
           </div>
         </div>
