--- a/living-sustainability.html
+++ b/living-sustainability.html
@@ -82,7 +82,7 @@
           <h2>Background</h2>
         </div>
         <div class="desc hide">
-          <p>This project is an HCI research paper I completed with Zhihan Zhang, a third year Ph.D. student at Paul G. Allen School of Computer Science & Engineering:</p>
+          <p>This project is part of a Human Computer Interaction (HCI) research paper I completed with Zhihan Zhang, a third year Ph.D. student at Paul G. Allen School of Computer Science & Engineering:</p>
           <div class="research-section br-12 pd-24 hide-long">
             <span class="r-title">Living Sustainability: In-Context Interactive Environmental Impact Communication</span>
             <span class="r-description">Zhihan Zhang, <b>Pu Thavikulwat</b>, Alexander Le Metzger, Yuxuan Mei, Felix Hähnlein, Zachary Englhardt, Tingyu Cheng, Shwetak Patel, Adriana Schulz, Vikram Iyer</span>
